@@ -3,10 +3,10 @@ title: 使用「連線資產」在 中共用 DAM 資產 [!DNL Sites]
 description: 使用遠程 [!DNL Adobe Experience Manager Assets] deployment when creating your web pages on another [!DNL Adobe Experience Manager Sites] 部署上可用的資產。
 contentOwner: AG
 translation-type: tm+mt
-source-git-commit: 29c3ca56281c482f195d84590ceb4ef07c556e64
+source-git-commit: caf50490c573c2f119f2cbfa14ee7cca12854364
 workflow-type: tm+mt
-source-wordcount: '2240'
-ht-degree: 40%
+source-wordcount: '2688'
+ht-degree: 28%
 
 ---
 
@@ -45,16 +45,17 @@ ht-degree: 40%
 
 ### 相關使用者和群組 {#users-and-groups-involved}
 
-以下說明設定及使用功能以及其相對應的使用者群組時，相關的各種角色。本機範圍用於作者建立網頁的使用案例。 遠端範圍適用於託管所需資產的 DAM 部署。[!DNL Sites]作者會讀取這些遠程資產。
+以下說明設定及使用功能以及其相對應的使用者群組時，相關的各種角色。本機範圍用於作者建立網頁的使用案例。 遠程範圍用於DAM部署。 [!DNL Sites]作者會讀取這些遠程資產。
 
 | 角色 | 範圍 | 使用者群組 | 逐步說明中的使用者名稱 | 需求 |
-|----------------------------------|--------|------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|------|--------|-----------|-----|----------|
 | [!DNL Sites] 管理員 | 本機 | [!DNL Experience Manager] `administrators` | `admin` | 設定[!DNL Experience Manager]並配置與遠程[!DNL Assets]部署的整合。 |
 | DAM 使用者 | 本機 | `Authors` | `ksaner` | 用於檢視及複製 `/content/DAM/connectedassets/` 中擷取的資產。 |
-| [!DNL Sites] 作者 | 本機 | `Authors` (在遠端DAM上具有讀取存取權，在本機上具有作者存取權 [!DNL Sites]) | `ksaner` | 使用者為[!DNL Sites]作者，他們使用此整合來改善其內容速度。 作者使用[!UICONTROL Content Finder]在遠端DAM中搜尋及瀏覽資產，並使用本機網頁中的必要影像。 已採用 `ksaner` DAM 使用者的認證。 |
+| [!DNL Sites] 作者 | 本機 | <ul><li>`Authors` (在遠端DAM上具有讀取存取權，在本機上具有作者存取權 [!DNL Sites]) </li> <li>`dam-users` 本地  [!DNL Sites]</li></ul> | `ksaner` | 使用者為[!DNL Sites]作者，他們使用此整合來改善其內容速度。 作者使用[!UICONTROL Content Finder]在遠端DAM中搜尋及瀏覽資產，並使用本機網頁中的必要影像。 已採用 `ksaner` DAM 使用者的認證。 |
 | [!DNL Assets] 管理員 | 遠端 | [!DNL Experience Manager] `administrators` | `admin` 遠程  [!DNL Experience Manager] | 設定跨原始資源共用 (CORS)。 |
 | DAM 使用者 | 遠端 | `Authors` | `ksaner` 遠程  [!DNL Experience Manager] | 在遠程[!DNL Experience Manager]部署上的作者角色。 使用[!UICONTROL 內容搜尋器]搜尋及瀏覽已連線資產中的資產。 |
-| DAM 經銷商 (技術使用者) | 遠端 | [!DNL Sites] `Authors` | `ksaner` 遠程  [!DNL Experience Manager] | [!DNL Experience Manager]本機伺服器（非[!DNL Sites]作者角色）會代表[!DNL Sites]作者使用此位於遠端部署的使用者來擷取遠端資產。 此角色與上述的兩個 `ksaner` 角色不一樣，而且屬於不同的使用者群組。 |
+| DAM 經銷商 (技術使用者) | 遠端 | <ul> <li> [!DNL Sites] `Authors`</li> <li> `connectedassets-assets-techaccts` </li> </ul> | `ksaner` 遠程  [!DNL Experience Manager] | [!DNL Experience Manager]本機伺服器（非[!DNL Sites]作者角色）會代表[!DNL Sites]作者使用此位於遠端部署的使用者來擷取遠端資產。 此角色與上述的兩個 `ksaner` 角色不一樣，而且屬於不同的使用者群組。 |
+| [!DNL Sites] 技術使用者 | 本機 | `connectedassets-sites-techaccts` | - | 允許[!DNL Assets]部署在[!DNL Sites]網頁中搜尋資產的參考。 |
 
 ## 配置[!DNL Sites]和[!DNL Assets]部署{#configure-a-connection-between-sites-and-assets-deployments}之間的連接
 
@@ -62,29 +63,28 @@ ht-degree: 40%
 
 要配置「已連接資產」和「本地[!DNL Sites]連接」，請執行以下步驟：
 
-1. 使用以下命令訪問現有的[!DNL Sites]部署或建立部署：
+1. 訪問現有[!DNL Sites]部署。 此[!DNL Sites]部署用於網頁製作，例如`https://[sites_servername]:port`。 當頁面編寫發生在[!DNL Sites]部署時，讓我們從頁面編寫的角度將[!DNL Sites]部署呼叫為本機。
 
-   1. 在JAR檔案的資料夾中，在終端上執行以下命令以建立每個[!DNL Experience Manager]伺服器。
-      `java -XX:MaxPermSize=768m -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
+1. 訪問現有[!DNL Assets]部署。 此[!DNL Assets]部署用於管理數位資產，例如`https://[assets_servername]:port`。
 
-   1. 幾分鐘後，[!DNL Experience Manager]伺服器成功啟動。 將此[!DNL Sites]部署視為網頁製作的本機電腦，例如`https://[local_sites]:4502`。
+1. 確保[!DNL Sites]部署和[!DNL Assets]部署AMS上存在具有適當範圍的用戶和角色。 在[!DNL Assets]部署上建立技術用戶，並添加到[涉及的用戶和組中提及的用戶組](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved)。
 
-1. 確保[!DNL Sites]部署和[!DNL Assets]部署AMS上存在具有本地範圍的用戶和組。 在[!DNL Assets]部署上建立技術用戶，並添加到[涉及的用戶和組中提及的用戶組](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved)。
+1. 訪問`https://[sites_servername]:port`的本地[!DNL Sites]部署。 按一下「**[!UICONTROL 工具]** > **[!UICONTROL 資產]** > **[!UICONTROL 連線資產設定]**」。提供下列值：
 
-1. 訪問`https://[local_sites]:4502`的本地[!DNL Sites]部署。 按一下&#x200B;**[!UICONTROL 「工具]** > **[!UICONTROL 資產]** > **[!UICONTROL 連線資產設定」]**，並提供下列各值：
-
-   1. [!DNL Assets] 位置為 `https://[assets_servername_ams]:[port]`。
+   1. 配置的&#x200B;**[!UICONTROL Title]**。
+   1. **[!UICONTROL 遠端DAM]** URL是格式中 [!DNL Assets] 位置的URL `https://[assets_servername]:[port]`。
    1. DAM 經銷商 (技術使用者) 的認證。
-   1. 在&#x200B;**[!UICONTROL 裝載點]**&#x200B;欄位中，輸入[!DNL Experience Manager]讀取資產的本地[!DNL Experience Manager]路徑。 例如，`remoteassets` 資料夾。
+   1. 在&#x200B;**[!UICONTROL 裝載點]**&#x200B;欄位中，輸入[!DNL Experience Manager]讀取資產的本地[!DNL Experience Manager]路徑。 例如，`connectedassets` 資料夾。從DAM擷取的資產會儲存在[!DNL Sites]部署的此資料夾中。
+   1. **[!UICONTROL 本機網]** 站URL是部署的 [!DNL Sites] 位置。[!DNL Assets] 部署會使用此值來維護此部署擷取之數位資產的 [!DNL Sites] 參考。
+   1. [!DNL Sites]技術使用者的認證。
+   1. **[!UICONTROL 原始二進位傳輸最佳化閾值]**&#x200B;欄位的值指定原始資產（包括轉譯）是否同步傳輸。 檔案大小較小的資產可輕鬆擷取，而檔案大小相對較大的資產則最好非同步同步。 該值取決於您的網路功能。
+   1. 如果您是使用資料存放區來儲存資產，且「資料存放區」是兩個 部署之間的共用儲存空間，請選取&#x200B;**[!UICONTROL 「與連線資產共用的資料存放區」]**。在這種情況下，閾值限制並不重要，因為實際資產二進位檔案可用於資料儲存上，並且不會傳輸。
 
-   1. 根據您的網路調整&#x200B;**[!UICONTROL 原始二進位傳輸最佳化臨界值]**。大於此臨界值的資產轉譯項目會以非同步方式傳送。
-   1. 如果您是使用資料存放區來儲存資產，且「資料存放區」是兩個 部署之間的共用儲存空間，請選取&#x200B;**[!UICONTROL 「與連線資產共用的資料存放區」]**。這種情況下，臨界值限制並不重要，因為實際的資產二進位檔位於資料存放區，而且不會轉移。
+   ![連接資產功能的典型配置](assets/connected-assets-typical-config.png)
 
-   ![連線資產的典型設定](assets/connected-assets-typical-config.png)
+   *圖：Connected Assets功能的典型配置。*
 
-   *圖：連線資產的典型設定.*
-
-1. 資產處理完畢且轉譯完成擷取後，請停用工作流程啟動器。調整本地([!DNL Sites])部署上的啟動程式配置，以排除擷取遠端資產的`connectedassets`資料夾。
+1. 已處理[!DNL Assets]部署上的現有數位資產，並產生轉譯。 使用此功能會擷取這些轉譯，因此不需要重新產生轉譯。 停用工作流程啟動器以防止重新產生轉譯。 調整([!DNL Sites])部署上的啟動器配置以排除`connectedassets`資料夾（資產會擷取至此資料夾）。
 
    1. 在[!DNL Sites]部署中，按一下&#x200B;**[!UICONTROL 工具]** > **[!UICONTROL 工作流]** > **[!UICONTROL 啟動器]**。
 
@@ -104,13 +104,9 @@ ht-degree: 40%
    >
    >作者擷取資產時，會擷取遠端 部署上可用的所有轉譯項目。若要針對所擷取的資產建立更多轉譯項目，請略過此設定步驟。[!UICONTROL DAM Update Asset]工作流程會觸發並建立更多轉譯。 這些轉譯僅在本機[!DNL Sites]部署中可用，在遠端DAM部署中則不可用。
 
-1. 將[!DNL Sites]部署新增為遠端[!DNL Assets'] CORS組態上的&#x200B;**[!UICONTROL 允許來源]**。
+1. 在[!DNL Assets]部署的CORS組態中，將[!DNL Sites]部署新增為允許的原點。 如需詳細資訊，請參閱[瞭解CORS](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/understand-cross-origin-resource-sharing.html)。
 
-   1. 使用管理員憑證登入。 搜尋 `Cross-Origin`. 存取&#x200B;**[!UICONTROL 「工具]** > **[!UICONTROL 作業]** > **[!UICONTROL Web 主控台」]**。
-
-   1. 若要建立[!DNL Sites]部署的CORS設定，請按一下&#x200B;**[!UICONTROL Adobe Granite跨原始資源共用政策]**&#x200B;旁邊的新增選項![資產新增圖示](assets/do-not-localize/aem_assets_add_icon.png)。
-
-   1. 在&#x200B;**[!UICONTROL 允許的來源]**&#x200B;欄位中，輸入本機[!DNL Sites]的URL，即`https://[local_sites]:[port]`。 儲存設定。
+<!-- TBD: Check if Launchers are to be disabled on CS instances. Is this option even available to the users on CS? -->
 
 ## 使用遠端資產 {#use-remote-assets}
 
@@ -140,17 +136,17 @@ ht-degree: 40%
 
    *圖：在遠端 DAM 上搜尋資產時，篩選文件類型和影像的選項.*
 
-1. 如果資產是以非同步方式擷取，一有擷取任務執行失敗，網站作者就會收到通知。編寫過程中或甚至在完成編寫之後，作者都能在[非同步工作](/help/operations/asynchronous-jobs.md)使用者介面中查看擷取任務和錯誤的詳細資訊。
+1. 如果資產是以非同步方式擷取，一有擷取任務執行失敗，網站作者就會收到通知。在編寫時，甚至在編寫之後，作者可以在[非同步作業](/help/operations/asynchronous-jobs.md)使用者介面中查看有關擷取工作和錯誤的詳細資訊。
 
    ![背景中非同步擷取資產作業的相關通知。](assets/assets_async_transfer_fails.png)
 
    *圖：背景中非同步擷取資產作業的相關通知。*
 
-1. 發佈頁面時，[!DNL Experience Manager]會顯示頁面上使用之資產的完整清單。 請確認發佈時，系統已成功擷取遠端資產。若要檢查所擷取資產的個別狀態，請參閱[非同步工作](/help/operations/asynchronous-jobs.md)使用者介面。
+1. 發佈頁面時，[!DNL Experience Manager]會顯示頁面上使用之資產的完整清單。 請確認發佈時，系統已成功擷取遠端資產。要檢查每個已獲取資產的狀態，請參閱[非同步作業](/help/operations/asynchronous-jobs.md)用戶介面。
 
    >[!NOTE]
    >
-   >即使有一或多個遠端資產未成功擷取，頁面還是會照常發佈。使用遠端資產的元件會以空白形式發佈。[!DNL Experience Manager]通知區域會針對非同步作業頁面中顯示的錯誤顯示通知。
+   >即使有一或多個遠端資產未成功擷取，頁面還是會照常發佈。使用遠端資產的元件會以空白形式發佈。[!DNL Experience Manager]通知區域顯示非同步作業頁面中顯示的錯誤通知。
 
 >[!CAUTION]
 >
@@ -158,15 +154,22 @@ ht-degree: 40%
 
 擷取的資產可設為其他任何本機資產以供使用，只是相關聯的中繼資料無法編輯。
 
-<!-- TBD: Uncomment after verification for Dec release.
+### 檢查跨網頁{#asset-usage-references}的資產使用情況
 
-### Check use of an asset across other pages {#asset-usage-references}
+[!DNL Experience Manager] 可讓DAM使用者檢查資產的所有參考。它有助於理解和管理遠程[!DNL Sites]和複合資產中資產的使用情況。 許多[!DNL Experience Manager Sites]部署網頁的作者可以在不同網頁的遠端[!DNL Assets]上使用資產。 為了簡化資產管理，而不會造成參考損壞，DAM使用者必須檢查資產在本機和遠端網頁上的使用情形。 資產的[!UICONTROL 屬性]頁面中的[!UICONTROL 參考]標籤會列出資產的本機和遠端參考。
 
-[!DNL Experience Manager] also lets you check all the incoming references to an asset, that is, the usage of an asset in remote [!DNL Sites] and in compound assets. Authors of webpages on [!DNL Experience Manager Sites] deployment can use an asset on a remote [!DNL Assets] deployment using the Connected Assets functionality. The [!UICONTROL References] tab in an asset's [!UICONTROL Properties] page lists the local and remote references of the asset.
+要查看和管理[!DNL Assets]部署上的引用，請執行以下步驟：
 
-Users can view incoming references of the assets and move or delete the asset.
+1. 在[!DNL Assets]控制台中選擇資產，然後從工具欄中按一下&#x200B;**[!UICONTROL 屬性]**。
+1. 按一下&#x200B;**[!UICONTROL References]**&#x200B;頁籤。 有關在[!DNL Assets]部署中使用資產的資訊，請參閱&#x200B;**[!UICONTROL 本地引用]**。 有關使用「已連接資產」功能提取資產的[!DNL Sites]部署中資產的使用，請參閱**[!UICONTROL 遠端參考]。
 
--->
+   ![資產屬性中的遠端參考](assets/connected-assets-remote-reference.png)
+
+1. [!DNL Sites]頁面的參考會顯示每個本機[!DNL Sites]的參考總數。 查找所有參照並顯示參照總數可能需要一些時間。
+1. 參考清單是互動式的，DAM使用者可以按一下參考以開啟參考頁面。 如果由於某些原因無法提取遠程引用，則顯示通知，通知用戶故障。
+1. 使用者可以移動或刪除資產。 移動或刪除資產時，所有選定資產／資料夾的參考總數會顯示在警告對話方塊中。 刪除尚未顯示參照的資產時，將顯示警告對話框。
+
+   ![強制刪除警告](assets/delete-referenced-asset.png)
 
 ## 限制和最佳做法{#tip-and-limitations}
 
@@ -198,13 +201,18 @@ Users can view incoming references of the assets and move or delete the asset.
 * 您可以對擷取的資產執行非破壞性的簡單編輯作業，也能執行透過 `Image` 元件支援的編輯工作。資產僅供唯讀。
 * 唯一可重新擷取資產的方法，就是將資產拖曳至頁面上。 沒有API支援或其他方法可重新擷取資產以進行更新。
 * 如果資產從DAM中終止運作，則這些資產會繼續在[!DNL Sites]頁面上使用。
+* 非同步讀取資產的遠端參考項目。 參考和總計計數不是即時的，如果網站作者在DAM使用者檢視參考時使用資產，則可能會有所不同。 DAM使用者可重新整理頁面，並在幾分鐘內再試一次以取得總計數。
 
 ## 疑難排解問題 {#troubleshoot}
 
-要排除常見錯誤情形的故障，請執行以下步驟：
+若要疑難排解常見錯誤，請依照下列步驟進行：
 
 * 如果您無法從[!UICONTROL Content Finder]搜尋遠端資產，請確定已有必要的角色和權限。
 * 從遠端Dam擷取的資產可能因一個或多個原因無法發佈在網頁上。 它不存在於遠程伺服器上，缺少獲取它的適當權限，或者網路故障可能是原因。 確保資產未從遠端DAM移除。 請確定已有適當的權限，並符合先決條件。 重新嘗試將資產新增至頁面並重新發佈。 檢查[非同步工作清單](/help/operations/asynchronous-jobs.md)，找出資產擷取作業的錯誤。
 * 如果您無法從本機[!DNL Sites]部署存取遠端DAM部署，請確定允許跨網站Cookie。 如果跨網站Cookie遭到封鎖，[!DNL Experience Manager]的兩個部署可能無法驗證。 例如，Incognito模式下的[!DNL Google Chrome]可能會阻止第三方Cookie。 若要允許[!DNL Chrome]瀏覽器中的Cookie，請按一下位址列中的「eye」圖示，導覽至「網站無法運作>已封鎖」，選取「遠端DAM URL」，並允許登入Token Cookie。 或者，請參閱[如何啟用協力廠商Cookie的說明。](https://support.google.com/chrome/answer/95647)
 
    ![Chrome在Incognito模式中發生Cookie錯誤](assets/chrome-cookies-incognito-dialog.png)
+
+* 如果未檢索遠程引用並導致錯誤消息，請檢查站點部署是否可用，並檢查網路連接問題。 稍後重試以檢查。 [!DNL Assets] 部署嘗試兩次建立與部署的 [!DNL Sites] 連線，然後報告失敗。
+
+![重試資產遠端參考失敗](assets/reference-report-failure.png)
